--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
+    "query-string": "^9.2.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.6"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0"
   }
 }
