--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
+    "next-themes": "^0.4.6",
     "query-string": "^9.2.2",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.5.2",
+    "sonner": "^2.0.7",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.14"
