--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
+    "node-appwrite": "^17.2.0",
     "query-string": "^9.2.2",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
